	* doc/repository.txt: added description of localisation support
	in .install files.

	Other changes:
	* src/repo.cc: now repo_line::get_name() is used always
	when a function wants to get the name of a repo_line to
	show to the user.
	* src/instr.cc 	(open_local_install_instructions): now 
	repo_name_list is initialized with 0 values, to prevent
	problems when the list is empty.

	
2007-01-12  Jose Dapena Paz  <jdapena@igalia.com>

	Implementation of support of l10n in catalogue names in
	sources.list:
	* src/repo.cc (struct repo_line): add support to store
	translations of the repository name. Support is also
	added to constructor.
	(repo_line::get_name): new function to get the proper
	translated name of a repository
	(repo_edit_response): if user changes the catalogue name
	drop all translations.
	(show_repo_edit_dialog): shows the proper catalogue
	name (translated or not).
	(add_new_repo): create new repositories without
	translations.
	(repo_encoder): encode translated strings for catalogues.
	(sources_list_reply): decode translated strings for
	catalogues.
	* doc/repository.txt: add description of sources.list
	repository names localisation support.
	
2007-01-11  Jose Dapena Paz  <jdapena@igalia.com>

	* src/instr.cc, src/repo.h, src/repo.cc: coding style review.
	Fixed many typos.
	Implementation of support of multiple catalogue files in
	.install files:
	* src/instr.cc: parse multiple catalogues names and deb lines.
	* src/repo.cc, src/repo.h: implementation of handling of
	multiple catalogues in .install file (UI flow, enable
	adding a last callback, and chaining calls to get repositories.
	* doc/repository.txt: add description of multicatalogue
	.install file feature.

2007-01-10  Jose Dapena Paz  <jdapena@igalia.com>

	* src/instr.cc (instr_select_packages_next, 
	instr_select_packages_cont, instr_select_packages): added
	stub dataflow to ask for selecting packages to install from a
	.install file.